<?xml version="1.0"?>
<!-- The below line gives better autocomplete in jetbrains, but it causes rospack to fail-->
<!--<package format='2' xmlns="http://download.ros.org/schema/package_format2.xsd">-->
<package format='2'>
    <name>iiwa_run</name>
    <version>0.0.1</version>
    <description>The iiwa_run package</description>
    <maintainer email="suraj.rathi00@gmail.com">Suraj Rathi</maintainer>
    <license>BSD3</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_commander</depend>
    <depend>moveit_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>

    <depend>python3-rospkg</depend>
    <depend>python3-numpy</depend>

    <export>
    </export>
</package>

