<?xml version="1.0"?>
<!-- The below line gives better autocomplete in jetbrains, but it causes rospack to fail-->
<!--<package format='2' xmlns="http://download.ros.org/schema/package_format2.xsd">-->
<package format='2'>
    <name>iiwa_run</name>
    <version>0.0.1</version>
    <description>The iiwa_run package</description>
    <maintainer email="suraj.rathi00@gmail.com">Suraj Rathi</maintainer>
    <license>BSD3</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>

    <depend>moveit</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_commander</depend>
    <exec_depend>moveit_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>python3-rospkg</exec_depend>
    <exec_depend>python3-numpy</exec_depend>
    <exec_depend>python3-tqdm</exec_depend>
    <!-- We have installed this from source!!! <depend>python3-pykdl</depend>-->
    <depend>kdl_parser_py</depend>

    <exec_depend>rviz</exec_depend>

    <export>
    </export>
</package>

