<?xml version="1.0"?>
<package format="2">
    <name>iiwa_needle_description</name>
    <version>0.0.1</version>
    <description>The iiwa_needle_description package</description>

    <maintainer email="suraj.rathi00@gmail.com">Suraj Rathi</maintainer>

    <license>BSD3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>iiwa_description</exec_depend>
    <exec_depend>xacro</exec_depend>


    <export>
    </export>
</package>
